# PuddleDetector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: pose_cleaner.m  quat2rotm.m
